Updated README file with the demo site

--- a/templates/compute.html
+++ b/templates/compute.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <head>
-    <title>Text Hash Generator</title>
+    <title>Text Hash Generator | My application deployed automatically</title>
 	<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='compute.css') }}">
 </head>
 <body>
